<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_rotate"
        android:shortcutId="lock_90"
        android:shortcutShortLabel="@string/shortcut_lock_90_short"
        android:shortcutLongLabel="@string/shortcut_lock_90_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="net.hasumi.coverrotator.EXECUTE_ROTATION"
            android:targetPackage="net.hasumi.coverrotator"
            android:targetClass="net.hasumi.coverrotator.ui.MainActivity">
            <extra
                android:name="command"
                android:value="lock_90" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_rotate"
        android:shortcutId="lock_270"
        android:shortcutShortLabel="@string/shortcut_lock_270_short"
        android:shortcutLongLabel="@string/shortcut_lock_270_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="net.hasumi.coverrotator.EXECUTE_ROTATION"
            android:targetPackage="net.hasumi.coverrotator"
            android:targetClass="net.hasumi.coverrotator.ui.MainActivity">
            <extra
                android:name="command"
                android:value="lock_270" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_rotate"
        android:shortcutId="unlock"
        android:shortcutShortLabel="@string/shortcut_unlock_short"
        android:shortcutLongLabel="@string/shortcut_unlock_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="net.hasumi.coverrotator.EXECUTE_ROTATION"
            android:targetPackage="net.hasumi.coverrotator"
            android:targetClass="net.hasumi.coverrotator.ui.MainActivity">
            <extra
                android:name="command"
                android:value="unlock" />
        </intent>
    </shortcut>
</shortcuts>
